# patchtools

./: .gitignore  AUTHORS  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
doc/: .gitignore  Makefile  exportpatch.asciidoc
patchtools/: __init__.py  command.py  config.py  exportpatch.py  fixpatch.py  modified_optparse.py  patch.py  patcherror.py  patchops.py  version.py
test/: KNOWN_BUGS.md  TESTING.md  __init__.py  pylintrc  ruff.toml  test_exportpatch.py  test_fixpatch.py  test_patch.py  util.py
test/data/: scsi-libsas-Add-rollback-handling-when-an-error-occurs.excluded_first_and_last  scsi-libsas-Add-rollback-handling-when-an-error-occurs.extracted  scsi-libsas-Add-rollback-handling-when-an-error-occurs.extracted_file2_of_3  scsi-libsas-Add-rollback-handling-when-an-error-occurs.known_good  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.all_fixed.dummy_mainline_double  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.all_fixed.dummy_mainline_single  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.all_fixed.signed_off_by  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.extracted  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.fixed_no_ack  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.fixed_no_ack_or_diffstat  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.fixed_no_diffstat  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.fixed_update_only  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.fixed_with_2nd_ref  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.fixed_with_double_fake_ref  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.fixed_with_single_fake_ref  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.known_good  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.needs_fixing  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.needs_fixing.no_diffstat  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.needs_fixing.with_reference  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.signed_off_by  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.some_reference  scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELECT.some_reference_twice  subject-and-ref-testing-file  subject-and-signed-off-by  subject-testing-file
